# stock-analyzer

./: .gitignore  Cargo.toml  Dockerfile  database.sql  docker-compose.yml  runem.sh  stock.sql
data/: stq_20260105.csv  stq_20260106.csv  stq_20260107.csv  stq_20260108.csv  stq_20260109.csv  stq_20260113.csv  stq_20260114.csv  stq_20260115.csv  stq_20260116.csv  stq_20260119.csv  stq_20260120.csv  stq_20260121.csv  stq_20260122.csv  stq_20260123.csv  stq_20260126.csv  stq_20260127.csv  stq_20260128.csv
src/: main.rs  main.rs_
src/ctrls/: analyze.rs  mod.rs  pull.rs
src/utils/: app_error.rs  data_insert.rs  mod.rs  plotter.rs  request.rs  softhmpo_url.rs  unzip.rs
static/css/: calendar.css
static/js/: calendar.js  pull.js
templates/: index.html
